--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ chardet==3.0.4
 idna==2.6
 python-decouple==3.1
 requests==2.18.4
+six==1.11.0
 slacker==0.9.65
 urllib3==1.22
+websocket-client==0.47.0
 websockets==4.0.1
